--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,1 +1,177 @@
-<p>signup works!</p>
+<!-- Formulaire Creer un compte -->
+<h2>Créer un compte</h2>
+<form>
+  <div class="form-group">
+    <label for="prenom"></label>
+    <input
+      required
+      ngModel
+      #prenom="ngModel"
+      name="prenom"
+      class="form-control"
+      id="prenom"
+      placeholder="Prénom*"
+    />
+    <div class="alert alert-danger" *ngIf="prenom.touched && !prenom.valid">
+      Ce champs est obligatoire!
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="nomfamille"></label>
+    <input
+      required
+      ngModel
+      #nomfamille="ngModel"
+      name="nomfamille"
+      class="form-control"
+      id="nomfamille"
+      placeholder="Nom de famille*"
+    />
+    <div
+      class="alert alert-danger"
+      *ngIf="nomfamille.touched && !nomfamille.valid"
+    >
+      Ce champs est obligatoire!
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="email"></label>
+    <input
+      required
+      ngModel
+      #email="ngModel"
+      name="email"
+      class="form-control"
+      id="email"
+      placeholder="Courriel*"
+    />
+    <div class="alert alert-danger" *ngIf="email.touched && !email.valid">
+      Ce champs est obligatoire!
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="email"></label>
+    <input
+      required
+      ngModel
+      #email="ngModel"
+      name="email"
+      class="form-control"
+      id="email"
+      placeholder="Confirmer l'adresse courriel*"
+    />
+    <div class="alert alert-danger" *ngIf="email.touched && !email.valid">
+      Ce champs est obligatoire!
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="password"></label>
+    <input
+      required
+      ngModel
+      #password="ngModel"
+      minlength="8"
+      maxlength="16"
+      name="password"
+      class="form-control"
+      id="pwd"
+      placeholder="Mot de passe*"
+    />
+    <div class="alert alert-danger" *ngIf="password.touched && !password.valid">
+      Ce champs est obligatoire!
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="password"></label>
+    <input
+      required
+      ngModel
+      #password="ngModel"
+      name="password"
+      class="form-control"
+      id="pwd"
+      placeholder="Confirmer le mot de passe*"
+    />
+    <div class="alert alert-danger" *ngIf="password.touched && !password.valid">
+      Ce champs est obligatoire!
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="telephone"></label>
+    <input
+      required
+      ngModel
+      #telephone="ngModel"
+      name="telephone"
+      class="form-control"
+      id="tel"
+      placeholder="Número de téléphone*"
+    />
+    <div
+      class="alert alert-danger"
+      *ngIf="telephone.touched && !telephone.valid"
+    >
+      Ce champs est obligatoire!
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="codepostal"></label>
+    <input
+      required
+      ngModel
+      #codepostal="ngModel"
+      name="codepostal"
+      class="form-control"
+      id="codepostal"
+      placeholder="Code postal*"
+    />
+    <div
+      class="alert alert-danger"
+      *ngIf="codepostal.touched && !codepostal.valid"
+    >
+      Ce champs est obligatoire!
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="adresse"></label>
+    <input
+      required
+      ngModel
+      #adresse="ngModel"
+      name="adresse"
+      class="form-control"
+      id="adresse"
+      placeholder="Adresse de livraison*"
+    />
+    <div class="alert alert-danger" *ngIf="adresse.touched && !adresse.valid">
+      Ce champs est obligatoire!
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label for="codeecole"></label>
+    <input
+      required
+      ngModel
+      #codeecole="ngModel"
+      name="codeecole"
+      class="form-control"
+      id="codeecole"
+      placeholder="Code de l'école*"
+    />
+    <div
+      class="alert alert-danger"
+      *ngIf="codeecole.touched && !codeecole.valid"
+    >
+      Ce champs est obligatoire!
+    </div>
+  </div>
+  <button
+    (click="ajouterDonnees()"
+    )
+    type="submit"
+    class="btn btn-primary mt-3"
+  >
+    Enregistrer
+  </button>
+</form>
